# devflow

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  SPEC.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
.devflow/: config.toml
.github/workflows/: release-windows.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/bindings/: AgentCompletePayload.ts  AgentConfig.ts  AgentErrorPayload.ts  AgentStatus.ts  DiffLine.ts  ExecutionConfig.ts  FileDiff.ts  NotificationAction.ts  ProjectConfig.ts  ToolEndPayload.ts  ToolExecution.ts
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  menu.rs
src-tauri/src/agent/: anthropic.rs  commands.rs  default_system_prompt.md  error.rs  extraction_prompt.md  memory.rs  mod.rs  provider.rs  service.rs  state.rs  types.rs  usage.rs
src-tauri/src/agent/prompts/: mod.rs
src-tauri/src/agent/prompts/agents/: bash_summarize.md  explore.md  plan.md  pr_comments.md  pr_review.md  security_review.md  session_title.md  summarize.md
src-tauri/src/agent/prompts/system_reminders/: empty_todo_list.md  plan_mode_active.md  plan_mode_reentry.md  plan_mode_subagent.md  stale_todo_list.md
src-tauri/src/agent/providers/: compaction.rs  headless.rs  mock.rs  mod.rs
src-tauri/src/agent/providers/anthropic/: mod.rs  types.rs
src-tauri/src/agent/providers/gemini/: mod.rs  types.rs
src-tauri/src/agent/tools/: executor.rs  local.rs  mod.rs  types.rs
src-tauri/src/agent/tools/descriptions/: bash.md  dispatch_agent.md  edit_file.md  exit_plan_mode.md  glob.md  grep.md  list_directory.md  multi_edit.md  notebook_edit.md  notebook_read.md  read_file.md  search_web.md  submit_plan.md  todo_read.md  todo_write.md  web_fetch.md  write_file.md
src-tauri/src/agent/tools/local/: context.rs  file.rs  mod.rs  notebook.rs  search.rs  shell.rs  state.rs  subagent.rs  web.rs
src-tauri/src/config/: commands.rs  error.rs  mod.rs  service.rs  types.rs
src-tauri/src/evals/: cases.rs  integration.rs  mod.rs  real_eval.rs  runner.rs  types.rs
src-tauri/src/git/: commands.rs  diff_parser.rs  error.rs  highlighter.rs  mod.rs  service.rs  types.rs  wsl.rs
src-tauri/src/template/: commands.rs  defaults.rs  error.rs  mod.rs  service.rs  types.rs
src-tauri/src/watcher/: commands.rs  mod.rs  service.rs
src/components/: BottomNav.css  BottomNav.tsx  ChatPanel.css  ChatPanel.test.tsx  ChatPanel.tsx  CommentEditor.css  CommentEditor.tsx  CommitModal.css  CommitModal.tsx  DiffView.css  DiffView.tsx  ErrorBoundary.css  ErrorBoundary.tsx  FileTree.css  FileTree.test.tsx  FileTree.tsx  MainLayout.css  MainLayout.tsx  Panel.css  SubagentPanel.css  SubagentPanel.test.tsx  SubagentPanel.tsx  Toast.css  Toast.tsx  ToolDetailDialog.css  ToolDetailDialog.tsx  WelcomeScreen.css  WelcomeScreen.test.tsx  WelcomeScreen.tsx
src/context/: AppContext.test.tsx  AppContext.tsx  ChatContext.test.tsx  ChatContext.tsx  CommentsContext.test.tsx  CommentsContext.tsx  NavigationContext.test.tsx  NavigationContext.tsx  SessionContext.tsx
src/contracts/: commands.contract.test.ts
src/hooks/: useLatest.ts  useSettingsForm.ts
src/pages/: ChangesPage.css  ChangesPage.tsx  ChatPage.css  ChatPage.tsx  SettingsPage.css  index.ts  (+2 more)
(+29 files in other folders)
