[package]
name = "devflow"
version = "0.1.0"
description = "AI-assisted iterative code development with integrated diff review"
authors = ["to-ny"]
edition = "2021"

[lib]
name = "devflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
devtools = []

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
directories = "5"
ts-rs = "10"
notify = "7"
notify-debouncer-mini = "0.5"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-onig"] }

[dev-dependencies]
tempfile = "3"

