[package]
name = "devflow"
version = "0.1.0"
description = "AI-assisted iterative code development with integrated diff review"
authors = ["to-ny"]
edition = "2021"

[lib]
name = "devflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
devtools = []

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
directories = "5"
ts-rs = "10"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-onig"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
serde_json = "1.0.146"
uuid = { version = "1.19.0", features = ["v4"] }
async-trait = "0.1.89"
once_cell = "1.19"
glob = "0.3"
walkdir = "2"
regex = "1"
chrono = "0.4"
scraper = "0.22"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3"

